--- a/LIT.Smabu/Client/Pages/Invoice/InvoiceLineEdit.razor
+++ b/LIT.Smabu/Client/Pages/Invoice/InvoiceLineEdit.razor
@@ -1,4 +1,4 @@
-﻿@page "/invoices/{InvoiceId:guid}/lines/{InvoiceLineId:guid}"
+﻿@page "/invoices/{InvoiceId:guid}/items/{InvoiceItemId:guid}"
 @using LIT.Smabu.Domain.Shared.Common;
 @using LIT.Smabu.Shared.Customers;
 @using LIT.Smabu.Shared.Invoices;
@@ -9,15 +9,15 @@
 
 
 <MudContainer>
-    @if (invoiceLine != null)
+    @if (incoiceItem != null)
     {
         <MudStack Row Justify="Justify.SpaceBetween">
-             <MudText Typo="Typo.h4">@($"Rechnung {@invoice.Number.ToShortString()} / Pos. {invoiceLine.Position}")</MudText>
+             <MudText Typo="Typo.h4">@($"Rechnung {@invoice.Number.ToShortString()} / Pos. {incoiceItem.Position}")</MudText>
                 <MudButtonGroup>
 
                 </MudButtonGroup>
             </MudStack>
-        <MudForm Model="invoiceLine" @bind-IsValid="@success" @bind-Errors="@errors">
+        <MudForm Model="incoiceItem" @bind-IsValid="@success" @bind-Errors="@errors">
             <MudGrid>
                 <MudItem xs="6" sm="3">
                     <MudNumericField Label="Menge" Required @bind-Value="quantityValue" TextChanged="RefreshTotalPrice" />
@@ -27,14 +27,14 @@
                 </MudItem>
                 <MudItem xs="6" sm="3">
                      <MudNumericField Label="Einzelpreis" Required Format="#0.00" Adornment="Adornment.End" AdornmentText="@(invoice.Currency.Name)"
-                        @bind-Value="invoiceLine.UnitPrice" TextChanged="RefreshTotalPrice" />
+                        @bind-Value="incoiceItem.UnitPrice" TextChanged="RefreshTotalPrice" />
                 </MudItem>
                 <MudItem xs="6" sm="3">
                      <MudNumericField Label="Summe" Format="#0.00" ReadOnly Adornment="Adornment.End" AdornmentText="@(invoice.Currency.Name)"
                         HideSpinButtons @bind-Value="totalPrice" />
                 </MudItem>
                 <MudItem xs="12" sm="12" >
-                    <MudTextField Label="Details" Lines="5" Clearable="true" Required @bind-Value="invoiceLine.Details" />
+                    <MudTextField Label="Details" Lines="5" Clearable="true" Required @bind-Value="incoiceItem.Details" />
                 </MudItem>
                  <MudItem xs="12">
                      <MudButtonGroup>
@@ -52,11 +52,11 @@
 @code {
     @inject NavigationManager NavigationManager;
     [Parameter] public Guid InvoiceId { get; set; }
-    [Parameter] public Guid InvoiceLineId { get; set; }
+    [Parameter] public Guid InvoiceItemId { get; set; }
     bool success;
     string[] errors = { };
     InvoiceDTO invoice;
-    InvoiceLineDTO invoiceLine;
+    InvoiceItemDTO incoiceItem;
     string quantityUnit;
     decimal quantityValue;
     decimal totalPrice;
@@ -65,23 +65,23 @@
     {
         pageInfoService.ShowBusyOverlay();
         invoice = await Http.GetFromJsonAsync<InvoiceDTO>($"Invoices/{InvoiceId}") ?? throw new Exception("NotFound");
-        invoiceLine = invoice.InvoiceLines.First(x => x.Id.Value == InvoiceLineId);
-        quantityUnit = invoiceLine.Quantity.Unit;
-        quantityValue = invoiceLine.Quantity.Value;
+        incoiceItem = invoice.Items.First(x => x.Id.Value == InvoiceItemId);
+        quantityUnit = incoiceItem.Quantity.Unit;
+        quantityValue = incoiceItem.Quantity.Value;
         RefreshTotalPrice(0);
         pageInfoService.HideBusyOverlay();
     }
 
     private void RefreshTotalPrice(object value)
     {
-        totalPrice = invoiceLine.UnitPrice * quantityValue;
+        totalPrice = incoiceItem.UnitPrice * quantityValue;
         StateHasChanged();
     }
 
     private async Task SubmitAsync()
     {
-        invoiceLine.Quantity = new Quantity(quantityValue, quantityUnit);
-        using var response = await Http.PutAsJsonAsync($"Invoices/{InvoiceId}/lines/{InvoiceLineId}", invoiceLine);
+        incoiceItem.Quantity = new Quantity(quantityValue, quantityUnit);
+        using var response = await Http.PutAsJsonAsync($"Invoices/{InvoiceId}/items/{InvoiceItemId}", incoiceItem);
         NavigationManager.NavigateTo($"/invoices/{InvoiceId}");
     }
 }
