--- a/LIT.Smabu/Client/Pages/Customer/Create.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Create.razor
@@ -15,13 +15,13 @@
          </MudButtonGroup>
      </MudStack>
 
-    <MudForm @ref="form" @bind-IsValid="@success" @bind-Errors="@errors">
+     <MudForm @ref="form" Class="mt-6" @bind-IsValid="@success" @bind-Errors="@errors">
         <MudGrid>
             <MudItem xs="12">
                  <MudTextField Label="Name" Required="true" @bind-Value="@model.Name" />
             </MudItem>
             <MudItem xs="12">
-                <MudButtonGroup>
+                 <MudButtonGroup Class="mt-6">
                     <MudIconButton Icon="@Icons.Material.Filled.Cancel" Color="Color.Default" Href="/customers" />
                     <MudIconButton Icon="@Icons.Material.Filled.Save" Color="Color.Success" Disabled="@(!success)" OnClick="@SubmitAsync" />
                 </MudButtonGroup>
