--- a/LIT.Smabu/Client/Pages/Customer/Edit.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Edit.razor
@@ -14,7 +14,7 @@
             <MudText Typo="Typo.h4">@("Kunde " + @model?.Name)</MudText>
             <MudButtonGroup></MudButtonGroup>
         </MudStack>
-        <MudForm Model="@model" @bind-IsValid="@success" @bind-Errors="@errors">
+        <MudForm Model="@model" Class="mt-6" @bind-IsValid="@success" @bind-Errors="@errors">
             <MudGrid>
                 <MudItem xs="12" sm="6">
                     <MudTextField Label="Name" Required @bind-Value="model.Name" />
@@ -24,7 +24,7 @@
                  </MudItem>
 
                  <MudItem xs="12">
-                     <MudGrid>
+                     <MudGrid Class="mt-6">
                          <MudItem xs="12">
                              <MudText Typo="Typo.h6">Adresse</MudText>
                          </MudItem>
@@ -53,7 +53,7 @@
                  </MudItem>
 
                  <MudItem xs="12">
-                     <MudGrid>
+                     <MudGrid Class="mt-6">
                          <MudItem xs="12">
                              <MudText Typo="Typo.h6">Kommunikation</MudText>
                          </MudItem>
@@ -72,7 +72,7 @@
                      </MudGrid>
                  </MudItem>
 
-                 <MudItem xs="12">
+                 <MudItem xs="12" Class="mt-6">
                      <MudButtonGroup>
                          <MudIconButton Icon="@Icons.Material.Filled.Cancel" Color="Color.Default" Href="/customers" />
                          <MudIconButton Icon="@Icons.Material.Filled.Save" Color="Color.Success" Disabled="@(!success)" OnClick="@SubmitAsync" />
