--- a/LIT.Smabu/Client/Pages/Invoice/Edit.razor
+++ b/LIT.Smabu/Client/Pages/Invoice/Edit.razor
@@ -13,11 +13,16 @@
     {
         <MudStack Row Justify="Justify.SpaceBetween">
              <MudText Typo="Typo.h4">@("Rechnung " + @model.Number.ToShortString())</MudText>
-                @if (model.IsPublished)
-            {
-                <MudAlert Severity="Severity.Warning" Variant="Variant.Outlined">Veröffentlicht @model.PublishedOn?.ToShortDateString()</MudAlert>
-            }
-            @* <MudButtonGroup></MudButtonGroup> *@
+            <MudButtonGroup Size="Size.Small" Variant="Variant.Outlined" OverrideStyles="false" DisableElevation>
+                @if (model.IsReleased)
+                {
+                    <MudButton Color="Color.Warning" OnClick="@WithdrawReleaseAsync">Veröffentlicht @model.ReleasedOn?.ToShortDateString()</MudButton>
+                }
+                else
+                {
+                    <MudButton Color="Color.Success" OnClick="@ReleaseAsync">Veröffentlichen</MudButton>
+                }
+            </MudButtonGroup>
         </MudStack>
 
         <MudForm Model="model" Class="mt-6" @bind-IsValid="@success" @bind-Errors="@errors" ReadOnly="@(!canEdit)">
@@ -40,10 +45,10 @@
                      <MudDatePicker Label="Leistungsende" MinDate="@performancePeriodTo" @bind-Date="@performancePeriodTo" />
                  </MudItem>
                  <MudItem xs="12" sm="2">
-                     <MudNumericField Label="Steuer" @bind-Value="@model.Tax" />
+                     <MudNumericField Label="Steuer" @bind-Value="@model.Tax" Min="0" Max="99" />
                  </MudItem>
                  <MudItem xs="12" sm="6">
-                     <MudNumericField Label="Steuer-Info" @bind-Value="@model.TaxDetails" />
+                     <MudTextField Label="Steuer-Info" @bind-Value="@model.TaxDetails" />
                  </MudItem>
                  <MudItem xs="12" sm="4">
                      <MudTextField Label="Summe" Disabled Value="@Currency.GetEuro().Format(@model.Amount)" />
@@ -134,7 +139,7 @@
         performancePeriodFrom = model.PerformancePeriod.From.ToDateTime(TimeOnly.MinValue);
         performancePeriodTo = model.PerformancePeriod.To?.ToDateTime(TimeOnly.MinValue);
         this.model = model;
-        this.canEdit = !model.IsPublished;
+        this.canEdit = !model.IsReleased;
         this.pageInfoService.HideBusyOverlay();
     }
 
@@ -143,6 +148,36 @@
         this.model.PerformancePeriod = DatePeriod.CreateFrom(this.performancePeriodFrom!.Value, this.performancePeriodTo);
         using var response = await Http.PutAsJsonAsync($"Invoices/{Id}", this.model);
         NavigationManager.NavigateTo("/invoices");
+    }
+
+    private async Task ReleaseAsync()
+    {
+        bool? result = await DialogService.ShowMessageBox(
+            $"Soll diese Rechnung freigegeben werden?",
+            "Abschluss und Ausdruck der Rechnung erstellen. Dieser Status kann wieder aufgehoben werden.",
+            yesText: "OK", cancelText: "Abbrechen");
+        if (result ?? false)
+        {
+            this.pageInfoService.ShowBusyOverlay();
+            using var response = await Http.PutAsync($"Invoices/{Id}/release", null);
+            this.pageInfoService.HideBusyOverlay();
+            await this.OnInitializedAsync();
+        }
+    }
+
+    private async Task WithdrawReleaseAsync()
+    {
+        bool? result = await DialogService.ShowMessageBox(
+            $"Soll die Freigabe zurückgesetzt werden?",
+            "Die Rechnung kann wieder bearbeitet werden.",
+            yesText: "OK", cancelText: "Abbrechen");
+        if (result ?? false)
+        {
+            this.pageInfoService.ShowBusyOverlay();
+            using var response = await Http.PutAsync($"Invoices/{Id}/withdrawrelease", null);
+            this.pageInfoService.HideBusyOverlay();
+            await this.OnInitializedAsync();
+        }
     }
 
     private async Task AddItem()
